--- a/Levels/index.html
+++ b/Levels/index.html
@@ -14,7 +14,7 @@
 
   <script>
     // Fetch levels from the server
-    fetch('https://platformit-db.zshreal.repl.co/index.php?qmethod=GetGameLevels')
+    fetch('https://platformitdb.000webhostapp.com/')
       .then(response => response.json())
       .then(data => {
         // Assuming the levels are returned as an array of objects with 'name' property
