--- a/Levels/index.html
+++ b/Levels/index.html
@@ -31,7 +31,7 @@
       fetch('https://platformitdb.000webhostapp.com/')
         .then(response => response.text())
         .then(data => {
-          const rows = data.split('\n').slice(1); // Split data into rows, excluding the header
+          const rows = data.trim().split('\n').slice(1); // Split data into rows, excluding the header
 
           rows.forEach((row, index) => {
             const [name, author, content, downloads, id] = row.split('\t');
