--- a/Levels/index.html
+++ b/Levels/index.html
@@ -9,7 +9,7 @@
       padding: 20px;
       margin: 10px;
       width: 300px;
-      height: 300px;
+      height: 350px;
       display: none;
     }
     .active {
@@ -44,17 +44,18 @@
             levelTitle.textContent = level.name;
 
             const levelDescription = document.createElement('p');
-            levelDescription.textContent = `Author: ${level.author}\nDownloads: ${level.downloads}`;
+            levelDescription.textContent = `Author: ${level.author}\nDownloads: ${level.downloads}\nDifficulty: ${level.difficulty}`;
 
-            // Placeholder image for demonstration purposes
-            const levelImage = document.createElement('img');
-            levelImage.src = 'https://via.placeholder.com/300'; // Replace with your image URL
-            levelImage.alt = level.name;
-            levelImage.classList.add('level-image');
+            // Play button for each level
+            const playButton = document.createElement('button');
+            playButton.textContent = 'Play';
+            playButton.addEventListener('click', function() {
+              window.location.href = `Levels/Play/${level.name}.html`;
+            });
 
             levelCard.appendChild(levelTitle);
             levelCard.appendChild(levelDescription);
-            levelCard.appendChild(levelImage);
+            levelCard.appendChild(playButton);
 
             levelContainer.appendChild(levelCard);
           });
