--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <div>
     <button id="playButton">Play</button>
-    <button id="levelMakerButton">Level Maker</button>
+    <a href="https://platform-it.vercel.app/Levels/maker.html">Level Maker</a>
     <button id="onlineLevelsButton">Online Levels</button>
   </div>
 
