--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <button id="playButton">Play</button>
     <button id="onlineLevelsButtonMaker">Level Maker</button>
     <button id="onlineLevelsButton">Online Levels</button>
+    <button id="tosButton">Terms Of Service</button>
   </div>
 
   <!-- Account Login/Register -->
@@ -28,6 +29,9 @@
 
     document.getElementById("onlineLevelsButtonMaker").addEventListener("click", function() {
       window.location.href = "Levels/maker.html";
+    });
+    document.getElementById("tosButton").addEventListener("click", function() {
+      window.location.href = "tos.html";
     });
 
     // Register button functionality
