--- a/Levels/maker.html
+++ b/Levels/maker.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Level Maker</title>
+  <style>
+    body, html {
+      height: 100%;
+      margin: 0;
+    }
 
+    .grid-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); /* Automatically fill columns */
+      grid-auto-rows: 100px; /* Adjust the height of grid items */
+      grid-gap: 10px; /* Adjust the gap between grid items */
+      height: 100%; /* Take full height of the viewport */
+      width: 100%; /* Take full width of the viewport */
+      padding: 20px; /* Optional padding for container */
+    }
+
+    .grid-item {
+      background-color: #ccc; /* Set a background color for grid items */
+      border: 1px solid #000; /* Add border for grid items */
+    }
+  </style>
+</head>
+<body>
+  <h1>Level Maker</h1>
+
+  <div class="grid-container">
+    <!-- Example grid items -->
+    <div class="grid-item"></div>
+    <div class="grid-item"></div>
+    <div class="grid-item"></div>
+    <!-- Add more grid items as needed -->
+  </div>
+</body>
+</html>
