--- a/Levels/maker.html
+++ b/Levels/maker.html
@@ -31,6 +31,12 @@
     .toolbox-item.selected {
       transform: scale(1.2) translateX(3px); /* Scale up and move slightly to the right */
     }
+
+    .main-content {
+      flex: 1;
+      position: relative; /* Position relative for absolute positioning of new items */
+      background-color: #fff; /* Example background color */
+    }
   </style>
 </head>
 <body>
@@ -48,12 +54,14 @@
     <!-- Add more toolbox items with icons as needed -->
   </div>
   
-  <div class="main-content">
+  <div class="main-content" onclick="placeSelectedItem(event)">
     <!-- Main content area (grid or other content) -->
     <!-- Your level maker content goes here -->
   </div>
 
   <script>
+    let selectedTool = null;
+
     function selectTool(tool) {
       // Remove 'selected' class from all toolbox items
       const toolboxItems = document.querySelectorAll('.toolbox-item');
@@ -61,6 +69,18 @@
 
       // Add 'selected' class to the clicked toolbox item
       tool.classList.add('selected');
+      selectedTool = tool.querySelector('img').cloneNode(); // Keep a reference to the selected tool icon
+    }
+
+    function placeSelectedItem(event) {
+      if (selectedTool) {
+        const newItem = selectedTool.cloneNode(); // Create a new item using the selected tool icon
+        newItem.style.position = 'absolute'; // Set position absolute for precise placement
+        newItem.style.left = `${event.clientX}px`; // Set horizontal position based on click coordinates
+        newItem.style.top = `${event.clientY}px`; // Set vertical position based on click coordinates
+
+        document.querySelector('.main-content').appendChild(newItem); // Append the new item to the main content
+      }
     }
   </script>
 </body>
