--- a/Levels/maker.html
+++ b/Levels/maker.html
@@ -76,7 +76,9 @@
       if (selectedTool) {
         const newItem = selectedTool.cloneNode(); // Create a new item using the selected tool icon
         newItem.style.position = 'absolute'; // Set position absolute for precise placement
-        newItem.style.left = `${event.clientX}px`; // Set horizontal position based on click coordinates
+
+        // Position the item 10 pixels to the left of the mouse pointer's position
+        newItem.style.left = `${event.clientX - 10}px`; // Adjusted position
         newItem.style.top = `${event.clientY}px`; // Set vertical position based on click coordinates
         newItem.style.width = '50px'; // Set the width of the placed object
         newItem.style.height = '50px'; // Set the height of the placed object
