--- a/Levels/maker.html
+++ b/Levels/maker.html
@@ -80,7 +80,7 @@
         // Position the item 10 pixels to the left of the mouse pointer's position
         newItem.style.left = `${event.clientX - 130}px`; // Adjusted position
         newItem.style.top = `${event.clientY - 100}px`; // Adjusted vertical position
-        newItem.style.top = `${event.clientY}px`; // Set vertical position based on click coordinates
+        //newItem.style.top = `${event.clientY}px`; // Set vertical position based on click coordinates
         newItem.style.width = '50px'; // Set the width of the placed object
         newItem.style.height = '50px'; // Set the height of the placed object
 
