--- a/Levels/maker.html
+++ b/Levels/maker.html
@@ -4,6 +4,17 @@
   <meta charset="UTF-8">
   <title>Level Maker with Toolbox</title>
   <style>
+
+   .character {
+      position: absolute;
+      left: 50px; /* Set initial X position */
+      top: 50px; /* Set initial Y position */
+      width: 50px;
+      height: 50px;
+      background-color: red;
+      border-radius: 10px; /* Rounded corners */
+    }
+    
     body {
       margin: 0;
       display: flex;
@@ -90,14 +101,26 @@
     }
     function spawnCharacter() {
       const character = document.createElement('div');
-      character.style.position = 'absolute';
-      character.style.left = '50px'; // Set the initial X position of the character
-      character.style.top = '50px'; // Set the initial Y position of the character
-      character.style.width = '50px'; // Set the width of the character
-      character.style.height = '50px'; // Set the height of the character
-      character.style.backgroundColor = 'red'; // Customize character appearance
-
+      character.classList.add('character'); // Add character class for styling
       document.querySelector('.main-content').appendChild(character);
+
+      let characterY = 50; // Initial Y position
+      const gravity = 0.5; // Gravity value
+
+      const fallInterval = setInterval(() => {
+        characterY += gravity; // Apply gravity to Y position
+        character.style.top = `${characterY}px`; // Update character's top position
+
+        const contentHeight = document.querySelector('.main-content').clientHeight; // Get content height
+        const characterHeight = character.clientHeight; // Get character height
+
+        // Check collision with the bottom of the content
+        if (characterY + characterHeight >= contentHeight) {
+          characterY = contentHeight - characterHeight; // Prevent falling through the floor
+          character.style.top = `${characterY}px`;
+          clearInterval(fallInterval); // Stop falling when hitting the bottom
+        }
+      }, 20);
     }
   </script>
 </body>
