--- a/Levels/maker.html
+++ b/Levels/maker.html
@@ -100,27 +100,47 @@
       }
     }
     function spawnCharacter() {
-      const character = document.createElement('div');
-      character.classList.add('character'); // Add character class for styling
-      document.querySelector('.main-content').appendChild(character);
+      setTimeout(() => {
+        const character = document.createElement('div');
+        character.classList.add('character'); // Add character class for styling
+        document.querySelector('.main-content').appendChild(character);
 
-      let characterY = 50; // Initial Y position
-      const gravity = 8; // Gravity value
+        let characterY = 50; // Initial Y position
+        let characterX = 50; // Initial X position
+        let isJumping = false; // Flag to control jumping
+        const gravity = 0.5; // Gravity value
+        const jumpForce = 10; // Jump force value
+        let enableControls = true; // Flag to enable controls
 
-      const fallInterval = setInterval(() => {
-        characterY += gravity; // Apply gravity to Y position
-        character.style.top = `${characterY}px`; // Update character's top position
+        document.addEventListener('keydown', (event) => {
+          if (enableControls) {
+            if (event.code === 'ArrowLeft') {
+              characterX -= 5; // Move left
+            } else if (event.code === 'ArrowRight') {
+              characterX += 5; // Move right
+            } else if (event.code === 'Space' && !isJumping) {
+              isJumping = true; // Set jumping flag to true
+              let jumpStep = 0;
 
-        const contentHeight = document.querySelector('.main-content').clientHeight; // Get content height
-        const characterHeight = character.clientHeight; // Get character height
+              const jumpInterval = setInterval(() => {
+                jumpStep += jumpForce - gravity; // Calculate jump force
+                characterY -= jumpStep; // Apply jump force
+                character.style.top = `${characterY}px`; // Update character's top position
 
-        // Check collision with the bottom of the content
-        if (characterY + characterHeight >= contentHeight) {
-          characterY = contentHeight - characterHeight; // Prevent falling through the floor
-          character.style.top = `${characterY}px`;
-          clearInterval(fallInterval); // Stop falling when hitting the bottom
-        }
-      }, 20);
+                if (characterY >= 50) {
+                  characterY = 50; // Reset Y position when landed
+                  character.style.top = `${characterY}px`;
+                  isJumping = false; // Reset jumping flag
+                  clearInterval(jumpInterval); // Stop jumping when landed
+                }
+              }, 20);
+            }
+
+            // Update character's position
+            character.style.left = `${characterX}px`;
+          }
+        });
+      }, 4000); // Wait for 4 seconds before enabling controls
     }
   </script>
 </body>
